consensusj-analytics: Replace methods with JDK 8 versions
(build needs to switch to options.release to catch these
mistakes sooner)